--- a/main.css
+++ b/main.css
@@ -3,11 +3,15 @@
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	background: linear-gradient(#d8e7ff, #f7d9aa);
+	
 }
 
-#world-sunny {
-	
+.world-sunny {
+	background: linear-gradient();
+}
+
+.world-rain {
+	background: linear-gradient(rgb(108, 154, 182), rgb(39, 170, 225));
 }
 
 #sound {
@@ -30,4 +34,13 @@
 	color: white;
 	bottom: 25px;
 	left: 100px;
+}
+
+#button-snow {
+	position: absolute;
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	bottom: 25px;
+	left: 150px;
 }
